-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 9.0.0-beta1
-
None
QUL version - 2.3.0
Qt creator crashes when I tried to create the MCU Desktop MinGW kit.
Steps to reproduce:
1) Open Qt Creator
2) Open preferences ->Devices -> MCU
3) In Targets supported by option select Qt for MCU <version> - Desktop 32bpp (GCC) kit
4) In the Requirements -> GNU Toolchain provide a valid MinGW Toolchain pathÂ
5) Now click on create kit button
| For Gerrit Dashboard: QTCREATORBUG-28296 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 439673,4 | McuSupport: Fix crash when there is no proper desktop toolchain | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |